# wastudio

./: CMakeLists.txt  README.md
doc/: LICENCE.txt  manual.odt
include/: wavefront.h
include/wavefront/: Animation.h  Face.h  Frame.h  Material.h  MaterialGroup.h  Model.h  Part.h  Texture.h  Translation.h  TriBoxCollision.h  Vertex.h  WavefrontException.h  auto_vector.h
share/wastudio/animations/: hand_up.anm  holdhat.anm  puzzle_cheat.anm  puzzle_solve.anm
share/wastudio/animations/doe2/: aim.anm  fall.anm  idle.anm  strafe_left.anm  strafe_right.anm  walk.anm  walk_back.anm
share/wastudio/models/: monkey.mtl  puzzle.mtl  vikingal.mtl
share/wastudio/models/blender/: al.blend  monkey.blend  puzzle.blend  vikingal.blend
share/wastudio/models/doe2/blender/: defender_farmer.blend  defender_hippie.blend  defender_tramp.blend  defiler_nuclear.blend
src/: plank.cpp
src/gluten/: Button.cpp  CheckBox.cpp  Color.cpp  Component.cpp  Core.cpp  Font.cpp  HScroll.cpp  Image.cpp  ImageButton.cpp  Label.cpp  ListBox.cpp  MessageBox.cpp  Mouse.cpp  OpenFileDialog.cpp  Panel.cpp  Path.cpp  PictureBox.cpp  Png.cpp  PopupMenu.cpp  Rectangle.cpp  Resource.cpp  SaveFileDialog.cpp  TextBox.cpp  Window.cpp
src/gluten/include/: gluten.h
src/gluten/include/gluten/: Button.h  CheckBox.h  Color.h  Component.h  Core.h  Exception.h  Font.h  Function.h  HScroll.h  Image.h  ImageButton.h  Label.h  ListBox.h  MessageBox.h  Mouse.h  OpenFileDialog.h  Panel.h  Path.h  PictureBox.h  Png.h  PopupMenu.h  Rectangle.h  Resource.h  SaveFileDialog.h  TextBox.h  Window.h
src/wastudio/: AboutWindow.cpp  AboutWindow.h  IntroWindow.cpp  IntroWindow.h  ModelWindow.cpp  ModelWindow.h  RenameWindow.cpp  RenameWindow.h  TestWindow.cpp  TestWindow.h  TutorialWindow.cpp  TutorialWindow.h  main.cpp
src/wavefront/: Animation.cpp  Face.cpp  Frame.cpp  Material.cpp  MaterialGroup.cpp  Model.cpp  Part.cpp  Texture.cpp  Translation.cpp  TriBoxCollision.cpp  Vertex.cpp
